<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
	<properties>
	    <maven.compiler.release>17</maven.compiler.release>
	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
    <parent>
        <groupId>cloud.contoterzi</groupId>
        <artifactId>helpdesk-backend</artifactId>
        <version>1.0.0</version>
    </parent>
    <artifactId>helpdesk-core</artifactId>
    <dependencies>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.1</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
                    <environmentVariables>
                        <APP_CONFIG_PATH>${project.basedir}/src/test/resources/test-config.yaml</APP_CONFIG_PATH>
                        <ALWAYS_CALL_LLM>false</ALWAYS_CALL_LLM>
                    </environmentVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>